argocd/manifests/prod/apps/outline/middleware.yaml
# Must be the same namespace as ingress route
# Each app requires a Middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tinyauth
  namespace: outline
spec:
  forwardAuth:
    address: http://tinyauth.tinyauth.svc.cluster.local:3000/api/auth/traefik
    trustForwardHeader: true
    authRequestHeaders:
      - Accept             # TinyAuth uses this to detect if request is from browser
      - User-Agent         # TinyAuth uses this to detect if request is from browser
      - Cookie             # Session cookie for authentication state
      - X-Forwarded-Proto  # Tells TinyAuth original protocol was HTTPS
      - X-Forwarded-Host   # Original hostname (hiker.pengiuns.com)
      - X-Forwarded-Uri    # Original request URI
      - X-Forwarded-For    # Client IP address
    authResponseHeaders:
      - Set-Cookie         # Session cookie from TinyAuth after login
